Criação de website para gerenciar.

--- a/src/main/webapp/index2.html
+++ b/src/main/webapp/index2.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Calibri" rel="stylesheet">
 	<meta charset="utf-8">
 	<title>Gerenciador Remoto Autotrac Launcher</title>
 </head>
